--- a/src/components/Slider/slider.module.scss
+++ b/src/components/Slider/slider.module.scss
@@ -3,5 +3,12 @@
 	margin-top: 0.625rem;
 	width: 100%;
 	height: 31.25rem;
-	background-color: $white;
+	.sliderItemContainer {
+		overflow-x: hidden;
+		position: relative;
+		width: 100%;
+		height: 100%;
+		margin: 0;
+		padding: 0;
+	}
 }
