--- a/src/components/Slider/slider.module.scss
+++ b/src/components/Slider/slider.module.scss
@@ -4,7 +4,7 @@
 	width: 100%;
 	height: 31.25rem;
 	.sliderItemContainer {
-		overflow-x: hidden;
+		overflow: hidden;
 		position: relative;
 		width: 100%;
 		height: 100%;
