--- a/src/components/Slider/SliderItem/sliderItem.module.scss
+++ b/src/components/Slider/SliderItem/sliderItem.module.scss
@@ -10,11 +10,11 @@
 	top: 0;
 	left: 100%;
 	transition: 1s linear;
-	background-color: $black;
 
 	.itemContainerRight {
-		width: 67.35%;
+		width: 70%;
 		background-color: $white;
+		border-left: 0.0625rem solid $border;
 
 		img {
 			display: block;
@@ -22,7 +22,7 @@
 		}
 	}
 	.itemContainerLeft {
-		width: 30.75%;
+		width: 30%;
 		padding: 0.625rem;
 		background-color: $white;
 		h4 {
