--- a/src/components/Slider/slider.module.scss
+++ b/src/components/Slider/slider.module.scss
@@ -1,6 +1,7 @@
 @import '../../styles/variables.scss';
 .sliderContainer {
 	margin-top: 0.625rem;
+	margin-bottom: 0.625rem;
 	width: 100%;
 	height: 31.25rem;
 	.sliderItemContainer {
