--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ html {
 
 body {
   margin: 0;
-  background-color: #F0F0F0;
+  background-color: #2e3436;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif, 'Segoe Print';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
