Updated style according to responsive design

--- a/src/components/Footer/footer.module.scss
+++ b/src/components/Footer/footer.module.scss
@@ -53,3 +53,14 @@
 		}
 	}
 }
+
+@media screen and (max-width: $break-large) {
+	.footerContainer {
+		.projectsLink {
+			display: none;
+		}
+		.profile {
+			width: 100%;
+		}
+	}
+}
