--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,3 +5,8 @@ $white: #fff;
 $border: #707070;
 $body: #f0f0f0;
 $black: #2e3436;
+
+// Break points
+$break-small: 375px;
+$break-medium: 800px;
+$break-large: 1200px;
