--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,37 +1,38 @@
 @import '../../styles/variables.scss';
 .headerContainer {
-	height: 3rem;
-	border-bottom: 0.0625rem solid $border;
-	background-color: $white;
-	width: 100%;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	position: fixed;
-	top: 0;
-	left: 0;
-	padding: 0 0.625rem;
-	z-index: $max-z-index;
-	h3 {
-		font-size: 1rem;
-		margin: 0;
-		padding: 0;
-	}
-	.logoContainer {
-		width: 3rem;
-		.logo {
-			display: block;
-			width: 100%;
-		}
-	}
+    height: 3rem;
+    border-bottom: 0.0625rem solid $secondary;
+    background-color: $white;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding: 0 0.625rem;
+    z-index: $max-z-index;
+    h3 {
+        font-size: 1rem;
+        margin: 0;
+        padding: 0;
+        color: $secondary;
+    }
+    .logoContainer {
+        width: 3rem;
+        .logo {
+            display: block;
+            width: 100%;
+        }
+    }
 }
 
 @media screen and (max-width: $break-medium) {
-	.headerContainer {
-		h3 {
-			&:last-child {
-				display: none;
-			}
-		}
-	}
+    .headerContainer {
+        h3 {
+            &:last-child {
+                display: none;
+            }
+        }
+    }
 }
